--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-scripts": "5.0.1",
     "three": "0.154.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^8.44.0",
+    "eslint-plugin-react": "^7.32.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
