--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "three": "0.154.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2"
   },
